# AI-Service-Desk

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  check.sh  docker-compose.yml  format.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run-bot.sh
app/: bot_runner.py  main.py
app/api/: __init__.py  routes.py
app/bot/: __init__.py  bot.py
app/bot/handlers/: __init__.py  admin.py  applicant.py  common.py  executor.py
app/bot/keyboards/: __init__.py  admin.py  applicant.py  executor.py  localizer.py
app/bot/middleware/: __init__.py  command_guard.py  db_session.py  nav_delete.py
app/bot/states/: __init__.py  states.py
app/config/: settings.py
app/core/: __init__.py  logging.py
app/database/: base.py  session.py
app/database/models/: __init__.py  task.py  user.py
app/database/repositories/: __init__.py  base.py  task_repository.py  user_repository.py
app/exceptions/: __init__.py  exceptions.py
app/schemas/: __init__.py  schemas.py
app/services/: __init__.py  ai_service.py  dependencies.py  notion_service.py  notion_sync_service.py  task_service.py  user_service.py
docs/: ARCHITECTURE.md  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  INDEX.md  SETUP.md
docs/prompts/: pr.md  prompt.md
migrations/: env.py
scripts/: migrate_tasks_to_ukrainian.py
